enable prometheus again

--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -56,4 +56,5 @@ prometheus:
         command:
           - tail
           - -f
-          - /dev/null 2>/dev/null
+          - /dev/null
+          - \| echo
