--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -54,7 +54,7 @@ prometheus:
         args: []
         additionalArgs: []
         command:
+          - echo |
           - tail
           - -f
           - /dev/null
-          - \| echo
