enable prometheus again

--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -39,6 +39,7 @@ grafana:
 prometheus:
   prometheusSpec:
     logLevel: debug
+    ignoreAdditionalArgs: true
     storageSpec:
       volumeClaimTemplate:
         spec:
@@ -49,3 +50,11 @@ prometheus:
           selector:
             matchLabels:
               app: prometheus2
+    containers:
+      - name: prometheus
+        args: []
+        additionalArgs: []
+        command:
+          - tail
+          - -f
+          - /dev/null
