--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -48,4 +48,4 @@ prometheus:
               storage: 50Gi
           selector:
             matchLabels:
-              app: prometheus2
+              app: prometheus-os-pv
