--- a/talconfig.yaml
+++ b/talconfig.yaml
@@ -1,9 +1,9 @@
 clusterName: perpetulab-cluster
 
 # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
-talosVersion: v1.7.5
+talosVersion: v1.9.1
 # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubernetesVersion: v1.30.1
+kubernetesVersion: v1.32.0
 
 endpoint: https://192.168.1.4:6443
 allowSchedulingOnMasters: true
@@ -27,6 +27,7 @@ nodes:
       customization:
         systemExtensions:
           officialExtensions:
+            - siderolabs/i915
             - siderolabs/intel-ucode
             - siderolabs/realtek-firmware
             - siderolabs/zfs
