--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -40,11 +40,17 @@ prometheus:
   prometheusSpec:
     logLevel: debug
     volumes:
+      - name: prometheus-os
+        hostPath:
+          path: /var/persistence/observability/prometheus
+          type: DirectoryOrCreate
       - name: prometheus-zfs
         hostPath:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
     volumeMounts:
+      - mountPath: /prometheus-os
+        name: prometheus-os
       - mountPath: /prometheus-zfs
         name: prometheus-zfs
     storageSpec:
@@ -56,4 +62,4 @@ prometheus:
               storage: 50Gi
           selector:
             matchLabels:
-              app: prometheus-os-pv
+              app: prometheus-xfs
