--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -62,4 +62,4 @@ prometheus:
               storage: 50Gi
           selector:
             matchLabels:
-              app: prometheus-xfs
+              app: prometheus-zfs
