--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -44,15 +44,21 @@ prometheus:
         hostPath:
           path: /var/persistence/observability/prometheus
           type: DirectoryOrCreate
-      - name: prometheus-zfs
+      - name: prometheus-xfs
         hostPath:
-          path: /var/mnt/data/persistence/observability/prometheus
+          path: /var/disk/a/data/observability/prometheus2
           type: DirectoryOrCreate
+#      - name: prometheus-zfs
+#        hostPath:
+#          path: /var/mnt/data/persistence/observability/prometheus
+#          type: DirectoryOrCreate
     volumeMounts:
       - mountPath: /prometheus-os
         name: prometheus-os
-      - mountPath: /prometheus-zfs
-        name: prometheus-zfs
+      - mountPath: /prometheus-xfs
+        name: prometheus-xfs
+#      - mountPath: /prometheus-zfs
+#        name: prometheus-zfs
     storageSpec:
       volumeClaimTemplate:
         spec:
