--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -40,10 +40,10 @@ prometheus:
   prometheusSpec:
     logLevel: debug
     volumes:
-#      - name: prometheus-os
-#        hostPath:
-#          path: /var/persistence/observability/prometheus
-#          type: DirectoryOrCreate
+      - name: prometheus-os
+        hostPath:
+          path: /var/persistence/observability/prometheus
+          type: DirectoryOrCreate
       - name: prometheus-xfs
         hostPath:
           path: /var/disk/a/data/observability/prometheus2
@@ -53,8 +53,8 @@ prometheus:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
     volumeMounts:
-#      - mountPath: /prometheus-os
-#        name: prometheus-os
+      - mountPath: /prometheus
+        name: prometheus-os
       - mountPath: /prometheus-xfs
         name: prometheus-xfs
       - mountPath: /prometheus-zfs
