--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -44,10 +44,10 @@ prometheus:
         hostPath:
           path: /var/persistence/observability/prometheus
           type: DirectoryOrCreate
-      - name: prometheus-xfs
-        hostPath:
-          path: /var/disk/a/data/observability/prometheus2
-          type: DirectoryOrCreate
+#      - name: prometheus-xfs
+#        hostPath:
+#          path: /var/disk/a/data/observability/prometheus2
+#          type: DirectoryOrCreate
       - name: prometheus-zfs
         hostPath:
           path: /var/mnt/data/persistence/observability/prometheus
@@ -55,8 +55,8 @@ prometheus:
     volumeMounts:
       - mountPath: /prometheus-os
         name: prometheus-os
-      - mountPath: /prometheus-xfs
-        name: prometheus-xfs
+#      - mountPath: /prometheus-xfs
+#        name: prometheus-xfs
       - mountPath: /prometheus-zfs2
         name: prometheus-zfs
     storageSpec:
