--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -68,4 +68,4 @@ prometheus:
               storage: 10Gi
           selector:
             matchLabels:
-              app: prometheus-xfs
+              app: prometheus-os
