--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -53,10 +53,10 @@ prometheus:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
     volumeMounts:
-      - mountPath: /prometheus-os
-        name: prometheus-os
-#      - mountPath: /prometheus-xfs
-#        name: prometheus-xfs
+#      - mountPath: /prometheus-os
+#        name: prometheus-os
+      - mountPath: /prometheus-xfs
+        name: prometheus-xfs
       - mountPath: /prometheus-zfs2
         name: prometheus-zfs
     storageSpec:
