--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -40,14 +40,14 @@ prometheus:
   prometheusSpec:
     logLevel: debug
     volumes:
-      - name: prometheus-os
-        hostPath:
-          path: /var/persistence/observability/prometheus
-          type: DirectoryOrCreate
-#      - name: prometheus-xfs
+#      - name: prometheus-os
 #        hostPath:
-#          path: /var/disk/a/data/observability/prometheus2
+#          path: /var/persistence/observability/prometheus
 #          type: DirectoryOrCreate
+      - name: prometheus-xfs
+        hostPath:
+          path: /var/disk/a/data/observability/prometheus2
+          type: DirectoryOrCreate
       - name: prometheus-zfs
         hostPath:
           path: /var/mnt/data/persistence/observability/prometheus
