--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -40,10 +40,10 @@ prometheus:
   prometheusSpec:
     logLevel: debug
     volumes:
-#      - name: prometheus-os
-#        hostPath:
-#          path: /var/persistence/observability/prometheus
-#          type: DirectoryOrCreate
+      - name: prometheus-os
+        hostPath:
+          path: /var/persistence/observability/prometheus/prometheus-db
+          type: DirectoryOrCreate
       - name: prometheus-xfs
         hostPath:
           path: /var/disk/a/data/observability/prometheus2
@@ -53,19 +53,19 @@ prometheus:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
     volumeMounts:
-#      - mountPath: /prometheus-os
-#        name: prometheus-os
+      - mountPath: /prometheus/prometheus-db
+        name: prometheus-os
       - mountPath: /prometheus-xfs
         name: prometheus-xfs
       - mountPath: /prometheus-zfs2
         name: prometheus-zfs
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          accessModes: ["ReadWriteOnce"]
-          resources:
-            requests:
-              storage: 10Gi
-          selector:
-            matchLabels:
-              app: prometheus-os
+#    storageSpec:
+#      volumeClaimTemplate:
+#        spec:
+#          accessModes: ["ReadWriteOnce"]
+#          resources:
+#            requests:
+#              storage: 10Gi
+#          selector:
+#            matchLabels:
+#              app: prometheus-os
