--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -39,33 +39,33 @@ grafana:
 prometheus:
   prometheusSpec:
     logLevel: debug
-    volumes:
-      - name: prometheus-os
-        hostPath:
-          path: /var/persistence/observability/prometheus/prometheus-db
-          type: DirectoryOrCreate
-      - name: prometheus-xfs
-        hostPath:
-          path: /var/disk/a/data/observability/prometheus2
-          type: DirectoryOrCreate
-      - name: prometheus-zfs
-        hostPath:
-          path: /var/mnt/data/persistence/observability/prometheus
-          type: DirectoryOrCreate
-    volumeMounts:
-      - mountPath: /prometheus/prometheus-db
-        name: prometheus-os
-      - mountPath: /prometheus-xfs
-        name: prometheus-xfs
-      - mountPath: /prometheus-zfs2
-        name: prometheus-zfs
-#    storageSpec:
-#      volumeClaimTemplate:
-#        spec:
-#          accessModes: ["ReadWriteOnce"]
-#          resources:
-#            requests:
-#              storage: 10Gi
-#          selector:
-#            matchLabels:
-#              app: prometheus-os
+#    volumes:
+#      - name: prometheus-os
+#        hostPath:
+#          path: /var/persistence/observability/prometheus/prometheus-db
+#          type: DirectoryOrCreate
+#      - name: prometheus-xfs
+#        hostPath:
+#          path: /var/disk/a/data/observability/prometheus2
+#          type: DirectoryOrCreate
+#      - name: prometheus-zfs
+#        hostPath:
+#          path: /var/mnt/data/persistence/observability/prometheus
+#          type: DirectoryOrCreate
+#    volumeMounts:
+#      - mountPath: /prometheus/prometheus-db
+#        name: prometheus-os
+#      - mountPath: /prometheus-xfs
+#        name: prometheus-xfs
+#      - mountPath: /prometheus-zfs2
+#        name: prometheus-zfs
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteMany"]
+          resources:
+            requests:
+              storage: 10Gi
+          selector:
+            matchLabels:
+              app: prometheus-os
