--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -38,6 +38,8 @@ grafana:
 
 prometheus:
   prometheusSpec:
+    additionalArgs:
+      - --storage.tsdb.path=/prometheus-os
     logLevel: debug
     volumes:
       - name: prometheus-os
