--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -42,8 +42,8 @@ prometheus:
 #      - name: prometheus
 #        args:
 #          - '--storage.agent.path=/prometheus-os2'
-    additionalArgs:
-      - '--storage.tsdb.path2=/prometheus-os2'
+#    additionalArgs:
+#      - '--storage.tsdb.path2=/prometheus-os2'
     logLevel: debug
     volumes:
       - name: prometheus-os
