--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -43,7 +43,8 @@ prometheus:
 #        args:
 #          - '--storage.agent.path=/prometheus-os2'
     additionalArgs:
-      - '--storage.tsdb.path2=/prometheus-os2'
+      - name: '--storage.tsdb.path2='
+        value: '/prometheus-os2'
     logLevel: debug
     volumes:
       - name: prometheus-os
