--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -43,8 +43,8 @@ prometheus:
 #        args:
 #          - '--storage.agent.path=/prometheus-os2'
     additionalArgs:
-      - name: 'storage.tsdb.path2'
-        value: '/prometheus-os2'
+      - name: 'storage.tsdb.path'
+        value: '/prometheus-os'
     logLevel: debug
     volumes:
       - name: prometheus-os
