--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -59,7 +59,7 @@ prometheus:
 #          path: /var/mnt/data/persistence/observability/prometheus
 #          type: DirectoryOrCreate
     volumeMounts:
-      - mountPath: /prometheus-os
+      - mountPath: /prometheus
         name: prometheus-os
 #      - mountPath: /prometheus-xfs
 #        name: prometheus-xfs
