--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -40,34 +40,34 @@ prometheus:
   prometheusSpec:
     logLevel: debug
     volumes:
-      - name: prometheus-os
-        persistentVolumeClaim:
-          claimName: prometheus-os-pvc
+#      - name: prometheus-os
+#        persistentVolumeClaim:
+#          claimName: prometheus-os-pvc
 #        hostPath:
 #          path: /var/persistence/observability/prometheus/prometheus-db
 #          type: DirectoryOrCreate
-#      - name: prometheus-xfs
-#        hostPath:
-#          path: /var/disk/a/data/observability/prometheus2
-#          type: DirectoryOrCreate
-#      - name: prometheus-zfs
-#        hostPath:
-#          path: /var/mnt/data/persistence/observability/prometheus
-#          type: DirectoryOrCreate
+      - name: prometheus-xfs
+        hostPath:
+          path: /var/disk/a/data/observability/prometheus2
+          type: DirectoryOrCreate
+      - name: prometheus-zfs
+        hostPath:
+          path: /var/mnt/data/persistence/observability/prometheus
+          type: DirectoryOrCreate
     volumeMounts:
-      - mountPath: /prometheus
-        name: prometheus-os
-#      - mountPath: /prometheus-xfs
-#        name: prometheus-xfs
-#      - mountPath: /prometheus-zfs2
-#        name: prometheus-zfs
-    storageSpec: null
-#      volumeClaimTemplate:
-#        spec:
-#          accessModes: ["ReadWriteOnce"]
-#          resources:
-#            requests:
-#              storage: 10Gi
-#          selector:
-#            matchLabels:
-#              app: prometheus-os
+#      - mountPath: /prometheus
+#        name: prometheus-os
+      - mountPath: /prometheus-xfs
+        name: prometheus-xfs
+      - mountPath: /prometheus-zfs
+        name: prometheus-zfs
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 10Gi
+          selector:
+            matchLabels:
+              app: prometheus-os
