--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -38,6 +38,13 @@ grafana:
 
 prometheus:
   prometheusSpec:
+    securityContext:
+#      runAsGroup: 2000
+      runAsNonRoot: false
+#      runAsUser: 1000
+#      fsGroup: 2000
+#      seccompProfile:
+#        type: RuntimeDefault
     logLevel: debug
     volumes:
 #      - name: prometheus-os
