--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -39,9 +39,9 @@ grafana:
 prometheus:
   prometheusSpec:
     securityContext:
-#      runAsGroup: 2000
+      runAsGroup: 0
       runAsNonRoot: false
-#      runAsUser: 1000
+      runAsUser: 0
 #      fsGroup: 2000
 #      seccompProfile:
 #        type: RuntimeDefault
