--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -47,9 +47,9 @@ prometheus:
 #        type: RuntimeDefault
     logLevel: debug
     volumes:
-#      - name: prometheus-os
-#        persistentVolumeClaim:
-#          claimName: prometheus-os-pvc
+      - name: prometheus-os-pvc
+        persistentVolumeClaim:
+          claimName: prometheus-kube-prometheus-stack-prometheus-db-prometheus-kube-prometheus-stack-prometheus-0
 #        hostPath:
 #          path: /var/persistence/observability/prometheus/prometheus-db
 #          type: DirectoryOrCreate
@@ -62,8 +62,8 @@ prometheus:
           path: /var/mnt/data/persistence/observability/prometheus
           type: DirectoryOrCreate
     volumeMounts:
-#      - mountPath: /prometheus
-#        name: prometheus-os
+      - mountPath: /prometheus-os
+        name: prometheus-os-pvc
       - mountPath: /prometheus-xfs
         name: prometheus-xfs
       - mountPath: /prometheus-zfs
