--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -38,10 +38,10 @@ grafana:
 
 prometheus:
   prometheusSpec:
-    securityContext:
-      runAsGroup: 0
-      runAsNonRoot: false
-      runAsUser: 0
+#    securityContext:
+#      runAsGroup: 0
+#      runAsNonRoot: false
+#      runAsUser: 0
 #      fsGroup: 2000
 #      seccompProfile:
 #        type: RuntimeDefault
