--- a/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
@@ -11,7 +11,8 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: /var/persistence/observability/prometheus # os drive
+#    path: /var/persistence/observability/prometheus # os drive
+    path: /var/mnt/data/persistence/observability/prometheus # os drive
     type: DirectoryOrCreate
 ---
 #apiVersion: v1
