--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -64,7 +64,7 @@ prometheus:
     volumeMounts:
       - mountPath: /prometheus-os
         name: prometheus-kube-prometheus-stack-prometheus-db
-        subPath: prometheus-db
+#        subPath: prometheus-db
       - mountPath: /prometheus-xfs
         name: prometheus-xfs
       - mountPath: /prometheus-zfs
