--- a/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
@@ -12,9 +12,9 @@ spec:
     - ReadWriteMany
   hostPath:
 #    path: /var/persistence/observability/prometheus # os drive
-#    path: /var/mnt/data/persistence/observability/prometheus # zfs
-    path: /var/disk/a/data/observability/prometheus # xfs
-    type: DirectoryOrCreate
+    path: /var/mnt/data/persistence/observability/prometheus # zfs
+#    path: /var/disk/a/data/observability/prometheus # xfs
+    type: Directory
 ---
 #apiVersion: v1
 #kind: PersistentVolumeClaim
