--- a/infra/controllers/storage/openebs/openebs-values.yaml
+++ b/infra/controllers/storage/openebs/openebs-values.yaml
@@ -14,5 +14,5 @@ openebs-crds:
 localpv-provisioner:
   hostpathClass:
     isDefaultClass: true
-    basePath: /var/disk/a
+    basePath: /var/openebs/local
     reclaimPolicy: Retain
