--- a/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/prometheus-pv.yaml
@@ -16,19 +16,17 @@ spec:
 #    path: /var/disk/a/data/observability/prometheus # xfs
     type: Directory
 ---
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: prometheus-os-pvc
-#  namespace: observability
-#  labels:
-#    app: prometheus-os-pvc
-#spec:
-#  accessModes:
-#    - ReadWriteOnce
-#  selector:
-#    matchLabels:
-#      app: prometheus-os
-#  resources:
-#    requests:
-#      storage: 10Gi
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: prometheus-hostpath-pvc
+  namespace: observability
+  labels:
+    app: prometheus-os-pvc
+spec:
+  storageClassName: openebs-hostpath
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
