--- a/infra/controllers/storage/zfs/pod.yaml
+++ b/infra/controllers/storage/zfs/pod.yaml
@@ -30,7 +30,12 @@ spec:
           mountPath: /opt/run
         - name: host-var
           mountPath: /opt/var
+        - name: openebs-pvc
+          mountPath: /opt/openebs-pvc
   volumes:
+    - name: openebs-pvc
+      persistentVolumeClaim:
+        claimName: prometheus-hostpath-pvc
     - name: host-var
       hostPath:
         path: /var
