--- a/apps/storage/scratch.yaml
+++ b/apps/storage/scratch.yaml
@@ -24,6 +24,8 @@ spec:
             - -f
             - /dev/null
           volumeMounts:
+            - name: openebs-pvc
+              mountPath: /openebs-pvc
             - mountPath: /data
               name: zfs
             - mountPath: /prometheus
@@ -32,6 +34,9 @@ spec:
 #            runAsUser: 1000
 #            runAsGroup: 2000
       volumes:
+        - name: openebs-pvc
+          persistentVolumeClaim:
+            claimName: prometheus-hostpath-pvc
         - name: prometheus
           persistentVolumeClaim:
             claimName: prometheus-kube-prometheus-stack-prometheus-db-prometheus-kube-prometheus-stack-prometheus-0
