--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -46,35 +46,33 @@ prometheus:
 #      seccompProfile:
 #        type: RuntimeDefault
     logLevel: debug
-    volumes:
-      - name: prometheus-hostpath-pvc
-        persistentVolumeClaim:
-          claimName: prometheus-hostpath-pvc
-      - name: prometheus-xfs
-        hostPath:
-          path: /var/disk/a/data/observability/prometheus2
-          type: DirectoryOrCreate
-      - name: prometheus-zfs
-        hostPath:
-          path: /var/mnt/data/persistence/observability/prometheus
-          type: DirectoryOrCreate
-    volumeMounts:
-      - mountPath: /prometheus-hostpath
-        name: prometheus-hostpath-pvc
-      - mountPath: /prometheus-os
-        name: prometheus-kube-prometheus-stack-prometheus-db
-#        subPath: prometheus-db
-      - mountPath: /prometheus-xfs
-        name: prometheus-xfs
-      - mountPath: /prometheus-zfs
-        name: prometheus-zfs
+#    volumes:
+#      - name: prometheus-hostpath-pvc
+#        persistentVolumeClaim:
+#          claimName: prometheus-hostpath-pvc
+#      - name: prometheus-xfs
+#        hostPath:
+#          path: /var/disk/a/data/observability/prometheus2
+#          type: DirectoryOrCreate
+#      - name: prometheus-zfs
+#        hostPath:
+#          path: /var/mnt/data/persistence/observability/prometheus
+#          type: DirectoryOrCreate
+#    volumeMounts:
+#      - mountPath: /prometheus-hostpath
+#        name: prometheus-hostpath-pvc
+#      - mountPath: /prometheus-os
+#        name: prometheus-kube-prometheus-stack-prometheus-db
+##        subPath: prometheus-db
+#      - mountPath: /prometheus-xfs
+#        name: prometheus-xfs
+#      - mountPath: /prometheus-zfs
+#        name: prometheus-zfs
     storageSpec:
       volumeClaimTemplate:
         spec:
-          accessModes: ["ReadWriteMany"]
+          storageClassName: openebs-hostpath
+          accessModes: ["ReadWriteOnce"]
           resources:
             requests:
               storage: 10Gi
-          selector:
-            matchLabels:
-              app: prometheus-os
