--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -71,8 +71,11 @@ prometheus:
     storageSpec:
       volumeClaimTemplate:
         spec:
-          storageClassName: openebs-hostpath
+#          storageClassName: openebs-hostpath
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
               storage: 10Gi
+          selector:
+            matchLabels:
+              app: prometheus-zfs
