--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -72,6 +72,7 @@ prometheus:
       volumeClaimTemplate:
         spec:
 #          storageClassName: openebs-hostpath
+          storageClassName:
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
