enable zfs for openebs

--- a/infra/controllers/storage/openebs/openebs-values.yaml
+++ b/infra/controllers/storage/openebs/openebs-values.yaml
@@ -16,3 +16,5 @@ localpv-provisioner:
     isDefaultClass: true
     basePath: /var/openebs/local
     reclaimPolicy: Retain
+zfs-localpv:
+  encrKeysDir: /var/zfs-keys
