enable zfs for openebs

--- a/infra/controllers/storage/openebs/openebs-values.yaml
+++ b/infra/controllers/storage/openebs/openebs-values.yaml
@@ -17,4 +17,5 @@ localpv-provisioner:
     basePath: /var/openebs/local
     reclaimPolicy: Retain
 zfs-localpv:
-  encrKeysDir: /var/zfs-keys
+  zfsNode:
+    encrKeysDir: /var/zfs-keys
