--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -71,12 +71,9 @@ prometheus:
     storageSpec:
       volumeClaimTemplate:
         spec:
-#          storageClassName: openebs-hostpath
-          storageClassName: ""
+          storageClassName: openebs-zfspv
+#          storageClassName: ""
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
               storage: 10Gi
-          selector:
-            matchLabels:
-              app: prometheus-zfs
