enable zfs for openebs

--- a/infra/controllers/storage/openebs/storageClass.yaml
+++ b/infra/controllers/storage/openebs/storageClass.yaml
@@ -6,4 +6,5 @@ parameters:
   fstype: "zfs"
   poolname: "data"
 provisioner: zfs.csi.openebs.io
+reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
