--- a/infra/controllers/storage/openebs/kustomization.yaml
+++ b/infra/controllers/storage/openebs/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - namespace.yaml
   - repository.yaml
   - release.yaml
-  - storageClass.yaml
+#  - storageClass.yaml
 configMapGenerator:
   - name: openebs-values
     namespace: openebs
