--- a/infra/controllers/storage/openebs/storageClass.yaml
+++ b/infra/controllers/storage/openebs/storageClass.yaml
@@ -1,10 +1,10 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: openebs-zfspv
-parameters:
-  fstype: "zfs"
-  poolname: "data"
-provisioner: zfs.csi.openebs.io
-reclaimPolicy: Retain
-volumeBindingMode: WaitForFirstConsumer
+#apiVersion: storage.k8s.io/v1
+#kind: StorageClass
+#metadata:
+#  name: openebs-zfspv
+#parameters:
+#  fstype: "zfs"
+#  poolname: "data"
+#provisioner: zfs.csi.openebs.io
+#reclaimPolicy: Retain
+#volumeBindingMode: WaitForFirstConsumer
