--- a/apps/arr/plex/pv.yaml
+++ b/apps/arr/plex/pv.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: plex
     app: plex
 spec:
+  storageClassName: manual
   capacity:
     storage: 10Gi
   accessModes:
