--- a/apps/arr/plex/pvc.yaml
+++ b/apps/arr/plex/pvc.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: plex
     app: plex
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
