--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -2,6 +2,7 @@ alertmanager:
   alertmanagerSpec:
     storage:
       volumeClaimTemplate:
+        storageClassName: manual
         spec:
           accessModes: ["ReadWriteOnce"]
           resources:
