--- a/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/volumes/alertmanager-pv.yaml
@@ -7,8 +7,9 @@ metadata:
     app.kubernetes.io/name: alertmanager
     app: alertmanager
 spec:
+  storageClassName: manual
   capacity:
-    storage: 10Gi
+    storage: 1Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
