--- a/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
+++ b/infra/controllers/observability/kube-prometheus-stack/kube-prometheus-stack-values.yaml
@@ -8,8 +8,11 @@ alertmanager:
           resources:
             requests:
               storage: 1Gi
+          volumeName: alertmanager-pv
+          volumeMode: Filesystem
           selector:
             matchLabels:
+              app.kubernetes.io/name: alertmanager
               app: alertmanager
 
 grafana:
