--- a/infra/controllers/storage/openebs/openebs-values.yaml
+++ b/infra/controllers/storage/openebs/openebs-values.yaml
@@ -19,7 +19,7 @@ localpv-provisioner:
 zfs-localpv:
   zfsController:
     updateStrategy:
-      type: RollingUpdate
+      type: Recreate
       rollingUpdate:
         maxSurge: 0
         maxUnavailable: 1
