add net capabilities to home-assistant

--- a/apps/home-assistant/deployment.yaml
+++ b/apps/home-assistant/deployment.yaml
@@ -27,6 +27,12 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: config
+          securityContext:
+            capabilities:
+              add:
+                - NET_ADMIN
+                - NET_RAW
+                - NET_BROADCAST
       volumes:
         - name: config
           persistentVolumeClaim:
