add privileged to home-assistant

--- a/apps/home-assistant/deployment.yaml
+++ b/apps/home-assistant/deployment.yaml
@@ -28,6 +28,7 @@ spec:
             - mountPath: /config
               name: config
           securityContext:
+            privileged: true
             capabilities:
               add:
                 - NET_ADMIN
