move other apps media from data to storage pool

--- a/apps/arr/bazarr/deployment.yaml
+++ b/apps/arr/bazarr/deployment.yaml
@@ -40,5 +40,5 @@ spec:
             type: DirectoryOrCreate
         - name: media
           hostPath:
-            path: /var/mnt/data/media
+            path: /var/storage/media
             type: DirectoryOrCreate
