--- a/apps/arr/tdarr/deployment.yaml
+++ b/apps/arr/tdarr/deployment.yaml
@@ -60,5 +60,5 @@ spec:
             type: DirectoryOrCreate
         - name: media
           hostPath:
-            path: /var/mnt/data/media
+            path: /var/storage/media
             type: DirectoryOrCreate
