--- a/apps/arr/qbittorrent/kustomization.yaml
+++ b/apps/arr/qbittorrent/kustomization.yaml
@@ -1,8 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - repository.yaml
-  - release.yaml
+  - deployment.yaml
+  - service.yaml
+  - ingress.yaml
+#  - repository.yaml
+#  - release.yaml
 configMapGenerator:
   - name: qbittorrent-values
     namespace: arr
