move torrent off helm chart

--- a/apps/arr/qbittorrent/deployment.yaml
+++ b/apps/arr/qbittorrent/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           ports:
             - name: qbittorrent-web
               containerPort: 8080
-            - name: qbittorrent-torrent
+            - name: torrent
               containerPort: 18863
           env:
             - name: TZ
