--- a/apps/arr/kustomization.yaml
+++ b/apps/arr/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - plex
-#  - qbittorrent
+  - qbittorrent
   - sonarr
   - radarr
   - prowlarr
